project(os_basic)
SET (LIB_LIST_LOCK lock_freertos)
SET (LIB_CLOCK_ARCHITECTURE stm32f4)
SET (LIB_THREAD_ARCHITECTURE freertos)
SET (LIB_TIMER_ARCHITECTURE stm32f4)
SET (LIB_FREERTOS_BOARD CORTEX_STM32F401_GCC_EMBTOM)

SET (STM32TARGET "STM32F401xE")
SET (STM32CHIP_FAMILY "F4")
SET (STM32HAL_USED_COMPONENTS gpio uart dma tim flash adc)

add_subdirectory(lib_clock)
add_subdirectory(lib_convention)
add_subdirectory(freertos)
add_subdirectory(lib_list)
add_subdirectory(mini-printf)
add_subdirectory(lib_stm32hal)
add_subdirectory(lib_thread)
add_subdirectory(lib_timer)
